k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-processor-ingress
  namespace: iot-stream-processor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: iot-processor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-processor-service
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-processor-service
            port:
              number: 80
